--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "javascript-starter-app",
   "version": "1.0.0",
-  "description": "JavaScript starter application",
+  "description": "JavaScript starter application. THis is baised off of JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
   },
   "author": "BJ Fink",
